[package]
name = "nix-user-chroot"
description = "Install & Run nix without root permissions"
license = "MIT"
version = "1.2.2"
authors = ["Jörg Thalheim <joerg@thalheim.io>"]
edition = "2018"
homepage = "https://github.com/nix-community/nix-user-chroot"
documentation = "https://github.com/nix-community/nix-user-chroot"
repository = "https://github.com/nix-community/nix-user-chroot"

[dependencies]
nix = "0.26.2"
libc = "0.2.139"
clap = { version = "4.2.4", features = ["derive"] }

[dev-dependencies]
rstest = "0.17.0"
testdir = "0.7.3"
