[package]
name = "nixbox"
description = "Install & Run nix without root permissions"
license = "MIT"
version = "0.1.0"
authors = ["Tenne <me@wah.pink>"]
edition = "2018"
homepage = "https://github.com/pinkwah/nixbox"
documentation = "https://github.com/pinkwah/nixbox"
repository = "https://github.com/pinkwah/nixbox"

[dependencies]
nix = "0.26.2"
libc = "0.2.139"
clap = { version = "4.2.4", features = ["derive"] }
psutil = "3.2.2"

[dev-dependencies]
rstest = "0.17.0"
testdir = "0.7.3"
