[package]
name = "brief-cli"
description = "C"
license = "MIT"
version = "0.1.0"
authors = ["Tenne <me@wah.pink>"]
edition = "2018"
homepage = "https://github.com/pinkwah/brief"
documentation = "https://github.com/pinkwah/brief"
repository = "https://github.com/pinkwah/brief"

[dependencies]
nix = { version = "*", features = ["fs", "hostname", "mount", "sched", "process", "user"] }
libc = "*"
clap = { version = "*", features = ["derive"] }
psutil = "*"
zbus = "4.3.1"

[dev-dependencies]
rstest = "*"
testdir = "*"
